--- a/_posts/面试/2022-11-05-面试题.md
+++ b/_posts/面试/2022-11-05-面试题.md
@@ -190,7 +190,43 @@ history.popState 当 history 发生变化时触发
 - 当元素的层叠等级一致、层叠顺序也相同的时候，在 DOM 流中处于后面的元素会覆盖前面的元素。
 
 ### flex布局
+#### 基本概念
+用flex布局的元素，称为flex container，它的所有子元素都是容器的flex item，容器默认存在两根轴：水平的主轴（main axis）和垂直的交叉轴（cross axis）。
+主轴的开始位置（与边框的交叉点）叫做 main start ，结束位置叫做 main end ；交叉轴的开始位置叫做 cross start ，结束位置叫做 cross end 。
 
+#### 属性
+- flex container
+  - flex direction
+    - row
+  - flex wrap
+    - no wrap
+  - flex-flow flex-direction 属性和 flex-wrap 属性的简写形式
+  - justify-content
+    - flex-start
+  - align-items
+    - stretch
+  - align-content 前提是需要设置flex-wrap: wrap，否则不会有效
+    - stretch
+
+- flex item
+  - order 数值越小，排列越靠前
+    - 0
+  - flex grow 
+    - 0 不占用剩余的空间扩展宽度
+  - flex shrink 容器空间不足时子项收缩比例
+    - 1
+  - flex basis 在主轴方向上的初始大小。优先级高于自身的宽度width
+    - auto
+  - flex flex-grow, flex-shrink, flex-basis 的缩写
+    - 默认值为 0 1 auto 后两个属性可选。
+  - align-self 垂直对齐方式。可覆盖 align-items 属性。
+    - auto 继承自父元素 align-items
+
+##### flex-shrink计算
+收缩后的子项宽度是怎么样计算的呢？实际上有一个公式：
+1. (200+300)所有子项的宽度的和 - (400)容器的宽度  = (100)
+2. 第一个子项的宽度占比：2/5，第二个子项的宽度占比：3/5
+3. 则第一个子项的的宽度为：200  - 2/5 * 100 = 160，第二个子项的宽度为：300  - 3/5 * 100 = 240
 
 ### 水平居中
 - text-align: center。居中子元素为行内或行内块适用。
