--- a/_posts/工程化/2022-11-09-webpack.md
+++ b/_posts/工程化/2022-11-09-webpack.md
@@ -10,6 +10,7 @@ tags:
     - Webpack
 ---
 # webpack
+
 ## 基本命令
 ```shell
 #安装
@@ -17,11 +18,13 @@ npm install -D webpack webpack-cli
 #打包
 npx webpack
 ```
+
 ## Webpack打包流程
 - 输入：从文件系统读入代码文件；
 - 模块递归处理：调用 Loader 转译 Module 内容，并将结果转换为 AST，从中分析出模块依赖关系，进一步递归调用模块处理过程，直到所有依赖文件都处理完毕；
 - 后处理：所有模块递归处理完毕后开始执行后处理，包括模块合并、注入运行时、产物优化等，最终输出 Chunk 集合；
 - 输出：将 Chunk 写出到外部文件系统；
+
 ## webpack配置方式
 - 单个配置对象：比较常用的一种方式，逻辑简单，适合大多数业务项目；
 - 配置对象数组：每个数组项都是一个完整的配置对象，每个对象都会触发一次单独的构建，通常用于需要为同一份代码构建多种产物的场景，如 Library；
@@ -66,40 +69,122 @@ module.exports = function(env, argv) {
 - argv：命令行 [Flags](https://webpack.js.org/api/cli/#flags) 参数，支持 entry/output-path/mode/merge 等。
 
 ## babel
-Webpack 场景下，只需使用 babel-loader 即可接入 Babel 转译功能
+Webpack 场景下，只需使用 babel-loader 即可接入 Babel 转译功能。将高版本语法转换为兼容性更强的低版本语法或 polyfill。
 
-@babel/preset-env 是一种 Babel 预设规则集，内置了一系列polyfill、插件等。Preset 是 Babel 的主要应用方式之一，不同应用场景有不同 Preset 资源。
+Preset 是 Babel 的主要应用方式之一，不同应用场景有不同 Preset 资源。
+
+### 常用babel插件
+@babel/preset-env 是一种 Babel 预设规则集，内置了一系列polyfill、插件等。
 
 @babel/core是babel转码的核心依赖。
-## typescript
-Webpack 有很多种接入 TypeScript 的方法，包括 ts-loader、awesome-ts-loader、 babel-loader+@babel/preset-typescript。通常可使用 ts-loader 构建 TypeScript 代码。
 
-注意：@babel/preset-typescript 只是简单完成代码转换，并未做类似 ts-loader 的类型检查工作。
+### 配置方式
+可以使用 `.babelrc` 文件或 `rule.options` 属性配置 Babel 功能逻辑，例如：
 ```javascript
 module.exports = {
+  /* ... */
+  module: {
+    rules: [
+      {
+        test: /\.js$/,
+        use: [
+          {
+            loader: 'babel-loader',
+            options: {
+              presets: ['@babel/preset-env']
+            }
+          }
+        ]
+      }
+    ]
+  }
+};
+```
+
+## typescript
+Webpack 有很多种接入 TypeScript 的方法，包括 ts-loader、awesome-ts-loader、 babel-loader+@babel/preset-typescript。
+
+### 引入ts-loader
+通常可使用 ts-loader 构建 TypeScript 代码。
+```shell
+npm i -D typescript ts-loader
+```
+
+```javascript
+const path = require('path');
+
+module.exports = {
+  /* xxx */
   module: {
     rules: [
       {
         test: /\.ts$/,
-        use: {
-          loader: 'babel-loader',
-          options: { presets: ['@babel/preset-typescript'] }
-        }
-      }
-    ]
+        use: 'ts-loader'
+      },
+    ],
+  },
+  resolve: {
+    extensions: ['.ts', '.js'],
+  }
+};
+```
+
+```java
+//tsconfig.json
+{
+  "compilerOptions": {
+    "noImplicitAny": true,
+    "moduleResolution": "node"
   }
 }
 ```
-## eslint
+
+### 和babel-loader搭配使用
+如果项目中已经使用 babel-loader，你也可以选择使用 @babel/preset-typescript 规则集，借助 babel-loader 完成 JavaScript 与 TypeScript 的转码工作。
+
 ```shell
+npm i -D @babel/preset-typescript
+```
+
+```javascript
+module.exports = {
+  /* ... */
+  module: {
+    rules: [
+      {
+        test: /\.js$/,
+        use: [
+          {
+            loader: 'babel-loader',
+            options: {
+              presets: ['@babel/preset-typescript']
+            }
+          }
+        ]
+      }
+    ]
+  }
+};
+```
+
+注意：@babel/preset-typescript 只是简单完成代码转换，并未做类似 ts-loader 的类型检查工作。
+
+## eslint
+在 Webpack 中，可以使用 eslint-webpack-plugin 接入 ESLint 工具
+
+```shell
+npm install -D webpack webpack-cli
+
 npm install --save-dev eslint eslint-webpack-plugin eslint-config-standard eslint-plugin-promise eslint-plugin-import eslint-plugin-n
 ```
+
 .eslintrc文件配置
 ```json
 {
   "extends": "standard"
 }
 ```
+
 webpack配置
 ```javascript
 const ESLintPlugin = require('eslint-webpack-plugin')
@@ -107,6 +192,7 @@ module.exports = {
   plugins: [new ESLintPlugin()]
 }
 ```
+
 ## eslint+typescript+babel
 ```shell
 npm i -D webpack webpack-cli \
