--- a/_posts/JavaScript/2023-2-13-fetch.md
+++ b/_posts/JavaScript/2023-2-13-fetch.md
@@ -8,6 +8,7 @@ header-img:
 catalog: true
 tags:
     - fetch
+    - CORS
 ---
 # fetch
 ## 初始化
@@ -191,6 +192,25 @@ const result = new TextDecoder('utf-8').decode(chunksAll);
 const commits = JSON.parse(result);
 console.log(commits[0].author.login);
 ```
+
+## 跨域请求
+有两种类型的跨源请求：
+- 安全请求。
+- 所有其他请求。
+
+### 安全请求
+如果一个请求满足下面这两个条件，则该请求是安全的：
+- GET, POST 或 HEAD
+- 仅允许自定义下列 header。
+  - Accept
+  - Accept-Language
+  - Content-Language
+  - Content-Type 的值为 application/x-www-form-urlencoded，multipart/form-data 或 text/plain。
+
+可以使用 `<form>` 或 `<script>` 进行安全请求。
+
+### 非安全请求
+当我们尝试发送一个非安全请求时，浏览器会发送一个特殊的“预检（preflight）”请求到服务器。
 
 ## 任务
 https://zh.javascript.info/fetch#cong-githubfetch-yong-hu-xin-xi
