--- a/_posts/JavaScript/2023-2-13-fetch.md
+++ b/_posts/JavaScript/2023-2-13-fetch.md
@@ -210,7 +210,60 @@ console.log(commits[0].author.login);
 可以使用 `<form>` 或 `<script>` 进行安全请求。
 
 ### 非安全请求
-当我们尝试发送一个非安全请求时，浏览器会发送一个特殊的“预检（preflight）”请求到服务器。
+浏览器发送非安全请求前，会先发送预检（preflight）请求。预检请求对JS不可见。
+
+预检请求使用 OPTIONS 方法，它没有 body，但是有三个 header：
+- Access-Control-Request-Method header 带有非安全请求的方法。
+- Access-Control-Request-Headers header 提供一个以逗号分隔的非安全 HTTP-header 列表。
+- origin
+
+如果服务器同意处理请求，那么它会进行响应，此响应的状态码应该为 200，没有 body，具有 header：
+- Access-Control-Allow-Origin 必须为 * 或进行请求的源（例如 https://javascript.info）才能允许此请求。
+- Access-Control-Allow-Methods 必须具有允许的方法。
+- Access-Control-Allow-Headers 必须具有一个允许的 header 列表。
+
+另外，header Access-Control-Max-Age 可以指定缓存此权限的秒数，在缓存时间内无需再次发送预检请求。
+
+然后浏览器会发起实际请求，响应需要带有Access-Control-Allow-Origin。
+
+### 响应头
+对于跨源请求，默认情况下，JavaScript 只能访问“安全的” response header：
+- Cache-Control
+- Content-Language
+- Content-Type
+- Expires
+- Last-Modified
+- Pragma
+
+访问任何其他 response header 都将导致 error。
+
+要授予 JavaScript 对任何其他 response header 的访问权限，服务器必须发送 Access-Control-Expose-Headers 响应头。
+它包含一个以逗号分隔的应该被设置为可访问的非安全 header 名称列表。
+
+### 凭证
+默认情况下，由 JavaScript 代码发起的跨源请求不会带来任何凭据（cookies 或者 HTTP 认证（HTTP authentication））。即使是同源的cookie。
+
+要在 fetch 中发送凭据，我们需要添加 credentials: "include" 选项，像这样：
+```javascript
+fetch('http://localhost', {
+  credentials: 'include'
+});
+```
+这时请求会携带同源的cookie。
+
+如果服务器同意接受 带有凭据 的请求，服务器还应该在响应中额外添加 header Access-Control-Allow-Credentials: true。
+
+请注意：对于具有凭据的请求，禁止 Access-Control-Allow-Origin 使用星号 *。它必须有一个确切的源。这是另一项安全措施，以确保服务器真的知道它信任的发出此请求的是谁。
+
+### 请求过程
+1. 对于非安全请求，浏览器发出带有三个 header 的预检请求。
+2. 服务器端响应200，并有三个 header（Max-Age可选）。
+3. 发送带有 origin header 的请求。
+4. 服务器响应带有 Access-Control-Allow-Origin，对于有凭证的请求，Access-Control-Allow-Credentials 为 true，
+Allow-Origin 应与 origin 相同（出于安全）。要允许 JS 访问除默认列表外的 header，服务器应该在 header Access-Control-Expose-Headers 中列出那些 header。
+
+### Referer 和 Origin
+Referer 可能不会被发送，甚至允许被修改。Origin能保证正确。
 
 ## 任务
 https://zh.javascript.info/fetch#cong-githubfetch-yong-hu-xin-xi
