--- a/_posts/2022-12-6-计算机基础.md
+++ b/_posts/2022-12-6-计算机基础.md
@@ -30,6 +30,36 @@ tags:
 ### 超大规模集成电路时代
 随着集成电路工艺的不断提升，出现了大规模和超大规模集成电路，此时开始出现微处理和微型计算机，也就是我们现在家用的计算机，就拿苹果的A13处理器来说，每一个逻辑元件在其中不超过7纳米，一个指甲盖大小的cpu就集成了85亿个晶体管。
 
+## 计算机的硬件组成
+### 冯诺依曼体系
+冯诺依曼就提出了存储程序的概念，将指令以二进制代码的形式事先输入到计算机的内存里，然后内存根据里面存储的指令从首地址也就是第一条指令开始按顺序一条一条的执行，直到程序执行结束，这种自动执行的机制比人工操作使计算机的计算效率大大提升。
+
+冯诺依曼体系是以运算器为核心的，我们现代的计算机是以存储器为核心
+### 现代计算机
+首先，计算机最基本的5大组成部分分别为：输入设备(比如键盘), 存储器(比如内存), 运算器(cpu), 控制器(cpu), 输出设备(显示器)。
+
+![img.png](/img/计算机硬件组成.png)
+
+上图的实线是数据线，是数据交换的通路，虚线是控制线和反馈线，是传递命令的通路
+
+- 首先我们的数据通过输入设备会被加工程计算机能够识别的0101的形式，我们直接输入的代码计算机是不认识的。
+- 然后经过输入设备处理的数据，先存到了存储器里（控制器控制输入设备），存储器可以存放数据和程序指令
+- 然后控制器可以直接从存储器里取得所需要执行的程序指令，取得指令后，控制器会分析指令要做什么（指令分为操作码和地址码），分析的就是操作码，到底要干嘛
+- 假设分析出来是读取数据的操作，也就是从存储器中取一个数据给运算器，那么读取数据的地址就在写在地址码里面，这时运算器就去就告诉存储器要取数据的地址，然后存储器直接把数据传递给运算器
+- 最后运算结束，运算结果会返回存储器，存储器可以直接把结果返回给输出设备（在控制器的控制下）
+- 最后输出设备，比如显示器上就看到我们想要的数据
+
+我们拿一个实际的javascript代码来举例:
+
+假设在我们的JS代码里，运行代码 let a = 1 + 1，此时上述的5大计算机部件如何处理的呢？
+- 首先键盘输入代码let a = 1 + 1将被解析为2进制代码，在控制器的控制下放入了内存
+- 然后内存存储完毕， CPU的控制器开始从内存里取出指令，分析出指令是一个加法操作（先让 1+1运算，后面才会把1+1运算的结果赋值给变量a）
+- 然后控制器控制运算器，运算器直接从内存里取出数据两个1，做一个加法运算得出结果，并返回给存储器，存储到一个内存的地址里
+- 然后控制器接着执行第二条指令（let a = 2），因为之前2已经被算出来了，第二条指令是赋值操作了（把1+1的值赋给变量a，a其实就是一个内存地址而已）
+- 此时CPU的控制将控制CPU的运算器做1+1的加法运算，并得出结果2
+- 最后执行指令完毕，如果我们要打印console.log(a)的话，a因为本质上是一个内存地址，cpu会根据内存地址，找到这个地址里存放的值，也就是console.log显示的值
+- 获取到要显示的值后，存储器直接将数据传给显示器，这样我们就可以在屏幕上看到2这个结果了
+
 ## 为什么计算机内部选择二进制数表示
 - 技术实现简单，计算机是由逻辑电路组成，逻辑电路通常只有两个状态，开关的接通与断开，这两种状态正好可以用 “1” 和 “0” 表示;
 - 易于进行转换，二进制与十进制数易于互相转换;
