--- a/_posts/工程化/2022-11-09-webpack.md
+++ b/_posts/工程化/2022-11-09-webpack.md
@@ -393,6 +393,9 @@ module.exports = {
 ```
 
 ## vue项目环境搭建
+```shell
+yarn add -D webpack webpack-cli vue-loader
+```
 ### 安装vue
 ```shell
 #两个版本要一致
@@ -502,6 +505,22 @@ module.exports = {
 }
 ```
 设置 template 标签的 lang = " pug"。
+
+### 使用 Server Side Render
+SPA 引入了新的问题：SEO 不友好和Time-To-Content 更长。SSR(Server Side Render) 正是为了解决这些问题而出现的技术。
+
+接下来，我们使用 Webpack、Vue3、Express、@vue/server-renderer 框架搭建一套完备的 Vue SSR 引用，代码地址。
+
+1. 需要为客户端、服务端环境分别准备项目 Entry 文件。
+2. 调用适当命令即可分别生成客户端、服务端版本代码：
+```shell
+# 客户端版本：
+npx webpack --config ./webpack.client.js
+# 服务端版本：
+npx webpack --config ./webpack.server.js 
+```
+3. 编写 Node 应用代码 server.js
+
 ## externals peerDependencies
 将第三方依赖排除在打包系统之外，避免出现使用者在业务项目中已经安装并使用了该第三方依赖，那么最终产物必然会包含两份第三方依赖代码。
 
