--- a/_posts/2022-12-6-计算机基础.md
+++ b/_posts/2022-12-6-计算机基础.md
@@ -251,7 +251,7 @@ JavaScript 字符串都是 UTF-16 序列，正如 ECMAScript 标准所说： 当
 
 我们可以给+11 和 +3.026取两个名字，在浮点数里分别叫阶码和尾数，如下图：
 
-![img.png](浮点数表示.png)
+![img.png](/img/浮点数表示.png)
 
 注意阶码分为了阶符和阶码的数值部分，尾数分为数符和尾数的数值部分。
 
