--- a/_posts/CSS/2022-12-14-css查漏补缺.md
+++ b/_posts/CSS/2022-12-14-css查漏补缺.md
@@ -12,11 +12,29 @@ tags:
 整理零碎的知识点。
 ## pointer-events
 绝对定位的元素会遮挡被覆盖的元素、导致它们的点击事件无法被触发。为遮罩层设置 pointer-events: none 可以让遮罩层不阻挡事件。
+
 ## filter、backdrop-filter
 两者能设置的值相同。
 - filter：该属性将模糊或颜色偏移等图形效果应用于元素。
 - backdrop-filter：该属性可以让你为一个元素后面区域添加图形效果（如模糊或颜色偏移）。
+
 它适用于元素背后的所有元素，为了看到效果，必须使元素或其背景至少部分透明。
 
 - filter 作用于当前元素，并且它的后代元素也会继承这个属性
 - backdrop-filter 作用于元素背后的所有元素
+
+## vertical-align
+vertical-align对块级元素无用。
+
+块级元素中的图片下边缘还会有一段空白，实际上是因为内联元素的vertical-align默认是基线对齐（字母x的下边缘），空白处是留给y、g的尾部的。也就是基线到底线的距离。
+
+所以解决这个问题可以使用以下几个方法：
+
+1、vertical-align失效，设置图片为块级元素。
+
+2、vertical-align使用top、bottom或middle。
+
+3、设置line-height值为0。
+
+如果要让图片垂直居中，父元素设置行高，图片设置vertical-align为middle即可，但因为middle是基线往上1/2的x-height，所以父元素还需要设置font-size为0才能实现真正的垂直居中。font-size为0，则基线等线都会在高度为中心线上。
+
