--- a/_posts/面试/2022-11-05-面试题.md
+++ b/_posts/面试/2022-11-05-面试题.md
@@ -237,12 +237,58 @@ history.popState 当 history 发生变化时触发
 2. 第一个子项的宽度占比：2/5，第二个子项的宽度占比：3/5
 3. 则第一个子项的的宽度为：200  - 2/5 * 100 = 160，第二个子项的宽度为：300  - 3/5 * 100 = 240
 
-### 多行省略
+### 单行省略
+```css
+.ellipsis {
+    width: xxpx;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
 ```
-display: -webkit-box;
--webkit-box-orient: vertical;
--webkit-line-clamp: 3;
-overflow: hidden;
+
+### 多行省略
+```css
+.ellipsis-2 {
+    width: xxpx;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+```
+
+### 超长文本块的省略
+```css
+p {
+    width: 200px;
+
+    white-space: normal;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
+p {
+    width: 200px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+/*上面两种搭配inline-block都可以*/
+span {
+    display: inline-block;
+}
+```
+
+```html
+<p>
+    <span>文本块1</span>
+    <span>文本块2</span>
+    <span>文本块3</span>
+</p>
 ```
 
 ### visibility: hidden, opacity: 0 和 display: none 的区别
