--- a/_posts/小程序/2022-11-07-小程序查漏补缺.md
+++ b/_posts/小程序/2022-11-07-小程序查漏补缺.md
@@ -15,6 +15,7 @@ tags:
 [小程序注册页](https://mp.weixin.qq.com/wxopen/waregister?action=step1)，注册后在后台能拿到小程序的AppID。
 
 小程序的 AppID 相当于小程序平台的一个身份证，和服务号或订阅号的 AppID有区别。
+
 ### 环境
 小程序的运行环境分成渲染层和逻辑层，其中 WXML 模板和 WXSS 样式工作在渲染层，JS 脚本工作在逻辑层。
 
@@ -23,8 +24,10 @@ tags:
 一个小程序存在多个界面，所以渲染层存在多个 WebView 线程，这两个线程的通信会经由微信客户端做中转，逻辑层发送网络请求也经由 Native 转发。
 
 开启ES6转ES5和样式补全，因为各平台[运行环境](https://developers.weixin.qq.com/miniprogram/dev/framework/runtime/env.html)不同，导致有部分差异，具体表现以客户端为准。
+
 ### 代码构成
 app.json的pages字段定义页面路径，文件夹中包含wxss、wxml、js和json文件
+
 #### JSON
 在小程序中，JSON文件属于配置文件。
 1. 全局配置app.json 。app.json 是当前小程序的全局配置，包括了小程序的所有页面路径、界面表现、网络超时时间、底部 tab 等。
@@ -39,6 +42,7 @@ app.json的pages字段定义页面路径，文件夹中包含wxss、wxml、js和
 
 #### 获取节点信息
 [节点信息查询和布局相交状态](https://developers.weixin.qq.com/miniprogram/dev/framework/view/selector.html)
+
 #### wxss
 WXSS 具有 CSS 大部分的特性，也做了一些扩充和修改。
 1. 新增尺寸单位rpx。规定屏幕宽为750rpx。如在 iPhone6 上，屏幕宽度为375px，共有750个物理像素，则750rpx = 375px = 750物理像素，1rpx = 0.5px = 1物理像素。
@@ -571,8 +575,8 @@ var tools = require("./tools.wxs");
 单个 wxml 文件内，重名模块名后者覆盖前者。模块命名必须是英语字母、下划线或数字，不能以数字开头。
 
 注意事项（不理解）
-- <wxs> 模块只能在定义模块的 WXML 文件中被访问到。使用 <include> 或 <import> 时，<wxs> 模块不会被引入到对应的 WXML 文件中。
-- <template> 标签中，只能使用定义该 <template> 的 WXML 文件中定义的 <wxs> 模块。
+- <wxs> 模块只能在定义模块的 WXML 文件中被访问到。使用 `<include>` 或 `<import>` 时，`<wxs>` 模块不会被引入到对应的 WXML 文件中。
+- <template> 标签中，只能使用定义该 <template> 的 WXML 文件中定义的 `<wxs>` 模块。
 
 ## 组件
 ### root-portal
