--- a/_posts/HTML/2022-11-08-HTML查漏补缺.md
+++ b/_posts/HTML/2022-11-08-HTML查漏补缺.md
@@ -126,13 +126,36 @@ textContent 提供了对元素内的 文本 的访问权限：仅文本，去掉
 假设我们有一个用户输入的任意字符串，我们希望将其显示出来。
 - 使用 innerHTML，我们将其“作为 HTML”插入，带有所有 HTML 标签。
 - 使用 textContent，我们将其“作为文本”插入，所有符号（symbol）均按字面意义处理。
+
 ### hidden属性
 从技术上来说，hidden 与 style="display:none" 做的是相同的事。但 hidden 写法更简洁。
+
 ### 受支持属性列表
 如果我们想知道给定类的受支持属性的完整列表，我们可以在规范中找到它们。例如，在 https://html.spec.whatwg.org/#htmlinputelement 中记录了 HTMLInputElement。
+
 ## 浏览器的默认行为
 1. 忽略head之前的空格和换行符。<br>
 2. body标签之后的内容会被移动到body内最下方。HTML 规范要求所有内容必须位于 <body> 内。所以 </body> 之后不能有空格。<br>
 3. 浏览器如果浏览器遇到格式不正确的 HTML，它会在形成 DOM 时自动更正它。例如，闭合没有关闭标签的p、li等标签，创建html标签，即使不存在。
-## 文档
+
+## 标签
+### canvas
+1. 通过属性为canvas设置宽高，而不是css。
+2. canvas会初始化宽度为300像素和高度为150像素。
+3. canvas支持后备内容
+
+### figure
+`<figure>` 里不一定要是一张图片，只要是一个这样的独立内容单元：为主要内容提供重要的补充说明。
+
+HTML5 的 `<figure>` 和 `<figcaption>` 元素，它正是为此而被创造出来的：为图片提供一个语义容器，在标题和图片之间建立清晰的关联。我们之前的例子可以重写为:
+```html
+<figure>
+  < img src="https://raw.githubusercontent.com/mdn/learning-area/master/html/multimedia-and-embedding/images-in-html/dinosaur_small.jpg"
+     alt="一只恐龙头部和躯干的骨架，它有一个巨大的头，长着锋利的牙齿。"
+     width="400"
+     height="341">
+  <figcaption>曼彻斯特大学博物馆展出的一只霸王龙的化石</figcaption>
+</figure>
+```
+## 资料
 WHATWG HTML规范，MDN
