--- a/_posts/JavaScript/2023-2-5-二进制数组.md
+++ b/_posts/JavaScript/2023-2-5-二进制数组.md
@@ -119,3 +119,5 @@ alert( arr.byteLength ); // 8（字节中的大小）
 - Int8Array，Int16Array，Int32Array —— 用于有符号整数（可以为负数）。
 - Float32Array，Float64Array —— 用于 32 位和 64 位的有符号浮点数。
 
+## 资料
+[Typed arrays - Binary data in the browser](https://web.dev/webgl-typed-arrays/)
