--- a/_posts/浏览器/2023-1-3-Web安全.md
+++ b/_posts/浏览器/2023-1-3-Web安全.md
@@ -54,7 +54,7 @@ document.open('https://www.github.com','', 'noopener=true')
 
 COOP：跨源开放者政策，对应的 HTTP Header 是 Cross-Origin-Opener-Policy。
 
-通过将 COOP 设置为 Cross-Origin-Opener-Policy: same-origin，可以把从该网站打开的其他不同源的窗口隔离在不同的浏览器 Context Group，这样就创建的资源的隔离环境。
+通过将 COOP 设置为 Cross-Origin-Opener-Policy: same-origin，可以把从该网站打开的其他不同源的窗口隔离在不同的浏览器 Context Group，这样就创建了资源的隔离环境。
 
 #### 跨源嵌入程序政策（COEP）
 COEP：跨源嵌入程序政策，对应的 HTTP Header 是 Cross-Origin-Embedder-Policy。
