--- a/_posts/面试/2022-11-05-面试题.md
+++ b/_posts/面试/2022-11-05-面试题.md
@@ -157,7 +157,6 @@ history.popState 当 history 发生变化时触发
 
 ### key, diff算法
 
-
 ## css
 ### inline, inline block 和 block 区别
 - block 前后都有换行符，能设置宽高和内外边距。
@@ -295,6 +294,13 @@ span {
 - opacity: 0。元素不可见，但占据空间，可响应事件。
 - visibility: hidden。元素不可见，占据空间，不可响应事件。
 - display: none。元素隐藏，不占据空间，不可响应事件。
+
+### 单行居中、多行居中
+单行居中：父元素设置行高即可，不过如果设置了高度，行高就必须和高度一致。
+
+多行居中：父元素设置行高，子元素设置为行内快，单独设置和父元素不同的行高。
+
+父元素设置高度，子元素设置行内块，vertical-align：middle。同时给父元素的伪元素设置行内块和垂直居中，宽度0高度百分百。
 
 ### 水平居中
 - text-align: center。居中子元素为行内或行内块适用。
