--- a/_posts/CSS/2022-12-14-css查漏补缺.md
+++ b/_posts/CSS/2022-12-14-css查漏补缺.md
@@ -41,3 +41,11 @@ vertical-align对块级元素无用。
 
 ## flex 和单行省略
 `flex: 1; display: flex`下的单行省略，容器需要设置`overflow: hidden;`单行省略除了单行省略需要的三个样式外，还需要设置`width: 100%;`
+
+## line-height
+line-height指的是两行文字基线之间的距离。
+
+![img.png](/img/line-height.png)
+
+CSS中起高度作用的是height和line-height。空div插入文字，撑起高度的是 line-height 而不是 font-size。line-box 会取 inline-box 元素中 line-height 值最高的为 line-height。
+
