--- a/_posts/JavaScript/事件/2023-1-10-鼠标拖拽.md
+++ b/_posts/JavaScript/事件/2023-1-10-鼠标拖拽.md
@@ -13,9 +13,10 @@ tags:
 # 鼠标拖拽
 ## 基础
 基础的拖放算法如下所示：
-1. 在 mousedown 上 —— 根据需要初始化相关变量等。
-2. 然后在 mousemove 上，通过更改 left/top 来移动它。
-3. 在 mouseup 上 —— 执行与完成拖放相关的所有行为。
+1. 监听拖放元素的 mousedown 事件。
+2. 在 mousedown 上 —— 做初始化。监听 document 的 mousemove 和 mouseup 事件，记录此时元素位置和大小。
+3. 在 mousemove 上，通过计算鼠标位置差值，更新 left/top 来移动它。
+4. 在 mouseup 上 —— 执行与完成拖放相关的所有行为，如重置，清除事件监听。
 
 注意：
 被拖动元素的 dragstart 和 mousedown 事件需要禁止浏览器的默认行为，否则拖动时会出现不符合预期的行为。
@@ -24,6 +25,7 @@ tags:
 ```css
 body {
     user-select: none;
+    overflow: hidden?;
 }
 iframe {
     pointer-events: none;
@@ -63,6 +65,7 @@ elem.ondragestart = function () {
   return false;
 };
 ```
+
 ## 鼠标事件中拿到当前顶层元素
 鼠标事件只发生在最顶层元素上，被遮挡的元素无法触发，那么在 mousemove 事件中，我们无法判断是否拖动到了可拖放区域。
 
@@ -92,6 +95,7 @@ function onMouseMove (event) {
   }
 }
 ```
+
 ## drag
 在 HTML 中，除了图像、链接和选择的文本默认的可拖拽行为之外，其他元素在默认情况下是不可拖拽的。图像和链接的 URL 以及文本被设置为拖拽数据。
 
@@ -100,6 +104,7 @@ function onMouseMove (event) {
 - 为 dragstart 添加监听程序，在其中设置拖拽数据。
 
 当用户开始拖拽时，会触发 dragstart 事件。dragstart 是冒泡事件。
+
 ### 拖拽数据
 所有 拖拽事件 都有一个名为 dataTransfer 的属性，它持有拖拽数据。拖拽数据 包含两个信息，数据的类型（或格式）和数据值。
 
