--- a/_posts/面试/2022-11-05-面试题.md
+++ b/_posts/面试/2022-11-05-面试题.md
@@ -517,8 +517,8 @@ transform scale
 `link(一般省略成a)→visited→hover→active`
 
 ## JS
-## 常用八种继承方案
-### 原型链继承
+### 常用八种继承方案
+#### 原型链继承
 构造函数、原型和实例之间的关系：每个构造函数都有一个原型对象，原型对象都包含一个指向构造函数的指针，而实例都包含一个原型对象的指针。
 
 本质是用父类实例重写原型对象。
@@ -560,7 +560,7 @@ var instance2 = new SubType();
 alert(instance2.colors); //"red,blue,green,black"
 ```
 
-### 借用构造函数继承
+#### 借用构造函数继承
 使用父类的构造函数来增强子类实例，等同于复制父类的实例给子类（不使用原型）
 
 ```
@@ -583,7 +583,7 @@ alert(instance2.color);//"red,green,blue"
 - 只能继承父类的实例属性和方法，不能继承原型属性/方法
 - 无法实现复用，每个子类都有父类实例函数的副本，影响性能
 
-### 组合继承
+#### 组合继承
 组合上述两种方法就是组合继承。用原型链实现对原型属性和方法的继承，用借用构造函数技术来实现实例属性的继承。
 
 ```
@@ -630,7 +630,7 @@ instance2.sayAge(); //27
 
 实例对象instance1上的两个属性就屏蔽了其原型对象SubType.prototype的两个同名属性。所以，组合模式的缺点就是在使用子类创建实例对象时，其原型中会存在两份相同的属性/方法。
 
-### 原型式继承
+#### 原型式继承
 利用一个空对象作为中介，将某个对象直接赋值给空对象构造函数的原型。
 
 ```
@@ -655,7 +655,7 @@ anotherPerson.name = "Greg";
 
 另外，ES5中存在Object.create()的方法，能够代替上面的object方法。
 
-### 寄生组合式继承
+#### 寄生组合式继承
 结合借用构造函数传递参数和寄生模式实现继承。这是最成熟的方法，也是现在库实现的方法。
 
 ```
@@ -695,7 +695,7 @@ instance1.colors.push("2"); // ["red", "blue", "green", "2"]
 instance1.colors.push("3"); // ["red", "blue", "green", "3"]
 ```
 
-### 混入方式继承多个对象
+#### 混入方式继承多个对象
 ```
 function MyClass() {
      SuperClass.call(this);
@@ -713,7 +713,8 @@ MyClass.prototype.myMethod = function() {
      // do something
 };
 ```
-### class
+
+#### class
 ```
 class Rectangle {
     // constructor
@@ -756,6 +757,25 @@ class Square extends Rectangle {
 const square = new Square(10);
 console.log(square.area);
 ```
+
+### 数组去重
+1. Set
+2. 双层for循环
+3. indexOf, includes
+4. sort + for循环
+5. filter + indexOf
+6. Map
+7. reduce + includes
+
+### Promise
+Promise 是一个对象，它代表了一个异步操作的最终完成或者失败。由于它的then方法和catch、finally方法会返回一个新的Promise所以可以允许我们链式调用，解决了传统的回调地狱问题。
+
+1. catch不管被连接到哪里，都能捕获上层未捕捉过的错误。
+2. 在Promise中，返回任意一个非 promise 的值都会被包裹成 promise 对象，例如return 2会被包装为return Promise.resolve(2)。
+3. Promise 的 .then 或者 .catch 可以被调用多次, 但如果Promise内部的状态一经改变，并且有了一个值，那么后续每次调用.then或者.catch的时候都会直接拿到该值。
+4. .then 或者 .catch 中 return 一个 error 对象并不会抛出错误，所以不会被后续的 .catch 捕获。
+5. .then 或 .catch 返回的值不能是 promise 本身，否则会造成死循环
+6. .then 或者 .catch 的参数期望是函数，传入非函数则会发生值透传，将结果传入到最近的then。
 
 ### null 和 undefined 区别
 - null 表示空，此处不应该有值；而 undefined 表示未定义，变量声明了未赋值就是 undefined。
