--- a/_posts/面试/2022-11-12-手写题.md
+++ b/_posts/面试/2022-11-12-手写题.md
@@ -488,5 +488,49 @@ function pipe(...args) {
 const reverseArgs = func => (...args) => func(...args.reverse());
 const pipe = reverseArgs(compose);
 ```
+
+## 冒泡排序
+```javascript
+function bubbleSort(arr) {
+    let flag = 1;
+    const len = arr.length
+    for (let i = 0; i <= len - 1 && flag === 1; i++) {
+      flag = 0
+      for (let j = 0; j < len - i; j++) {
+        if (arr[j] > arr[j + 1]) {
+          [arr[j], arr[j + 1]] = [arr[j + 1], arr[j]];
+          flag = 1// 发生数据交换flag置为1
+        }
+      }
+    }
+    return arr
+}
+```
+
+## 快速排序
+快速排序（Quick Sort）是对冒泡排序的一种改进。
+
+```javascript
+function quickSort(arr) {
+    // 4.结束递归（当ary小于等于一项，则不用处理）
+    if (arr.length <= 1) {
+      return arr
+    }
+    // 1. 找到数组的中间项，在原有的数组中把它移除
+    const middleIndex = Math.floor(arr.length / 2)
+    const middle = arr.splice(middleIndex, 1)[0]
+    // 2. 准备左右两个数组，循环剩下数组中的每一项，比当前项小的放到左边数组中，反之放到右边数组中
+    const leftArr = [], rightArr = []
+    for (let i = 0; i < arr.length; i++) {
+      const current = arr[i]
+      current < middle ? leftArr.push(current) : rightArr.push(current)
+
+    }
+    // 3. 递归方式让左右两边的数组持续这样处理，一直到左右两边都排好序为止。
+    //（最后让左边+中间+右边拼接成最后的结果）
+    return quickSort(leftArr).concat(middle, quickSort(rightArr))
+}
+```
+
 ## 资料
 [20行实现 Promise](https://juejin.cn/post/6844904094079926286)
