--- a/_posts/CSS/2023-2-26-CSS实现时钟.md
+++ b/_posts/CSS/2023-2-26-CSS实现时钟.md
@@ -61,4 +61,93 @@ Values:
 - `none`
 
 ## 时分秒
+```html
+<div class="time">
+  <span class="hour"></span>
+  <a class="split">:</a>
+  <span class="minitus"></span>
+  <a class="split">:</a>
+  <span class="seconds"></span>
+</div>
 
+<style>
+    :root{
+        --dh: 19;
+        --dm: 26;
+        --ds: 30;
+    }
+    @property --h {
+        syntax: '<integer>';
+        inherits: false;
+        initial-value: 0;
+    }
+    @property --m {
+        syntax: '<integer>';
+        inherits: false;
+        initial-value: 0;
+    }
+    @property --s {
+        syntax: '<integer>';
+        inherits: false;
+        initial-value: 0;
+    }
+
+    @keyframes hour {
+        to {
+            --h: 24
+        }
+    }
+    @keyframes minitus {
+        to {
+            --m: 60
+        }
+    }
+    @keyframes seconds {
+        to {
+            --s: 60
+        }
+    }
+    .hour::after{
+        counter-reset: hour var(--h);
+    /*decimal-leading-zero 补0*/
+        content: counter(hour, decimal-leading-zero);
+        animation: hour calc(60s * 60 * 24) infinite steps(24);
+        /*初始化时间*/
+        animation-delay: calc( -60s * 60 * var(--dh));
+    }
+    .minitus::after{
+        counter-reset: minitus var(--m);
+        content: counter(minitus, decimal-leading-zero);
+        animation: minitus calc(60s * 60) infinite steps(60);
+        animation-delay: calc( -60s * var(--dm) );
+    }
+    .seconds::after{
+        counter-reset: seconds var(--s);
+        content: counter(seconds, decimal-leading-zero);
+        animation: seconds 60s infinite steps(60);
+        animation-delay: calc( -60s * var(--dm) );
+    }
+    /*分隔符的闪烁动画*/
+    @keyframes shark {
+        0%, 100%{
+            opacity: 1;
+        }
+        50%{
+            opacity: 0;
+        }
+    }
+    .split{
+        animation: shark 1s step-end infinite;
+    }
+</style>
+<script >
+    // 考虑秒针的运动情况
+    const d = new Date()
+    const h = d.getHours();
+    const m = d.getMinutes();
+    const s = d.getSeconds();
+    document.body.style.setProperty('--ds', s)
+    document.body.style.setProperty('--dm', m + s/60)
+    document.body.style.setProperty('--dh', h + m/60 + s/3600)
+</script>
+```
