--- a/_posts/面试/2022-11-05-面试题.md
+++ b/_posts/面试/2022-11-05-面试题.md
@@ -776,6 +776,14 @@ Promise 是一个对象，它代表了一个异步操作的最终完成或者失
 4. .then 或者 .catch 中 return 一个 error 对象并不会抛出错误，所以不会被后续的 .catch 捕获。
 5. .then 或 .catch 返回的值不能是 promise 本身，否则会造成死循环
 6. .then 或者 .catch 的参数期望是函数，传入非函数则会发生值透传，将结果传入到最近的then。
+7. .then方法是能接收两个参数的，第一个是处理成功的函数，第二个是处理失败的函数，再某些时候你可以认为catch是.then第二个参数的简便写法。
+8. .finally方法也是返回一个Promise，他在Promise结束的时候，无论结果为resolved还是rejected，都会执行里面的回调函数。
+9. 它最终返回的默认会是一个上一次的Promise对象值，不过如果抛出的是一个异常则返回异常的Promise对象。
+10. Promise.all()的作用是接收一组异步任务，然后并行执行异步任务，并且在所有异步操作执行完后才执行回调。
+11. Promise.all()的作用是接收一组异步任务，然后并行执行异步任务，并且在所有异步操作执行完后才执行回调。
+12. Promise.all().then()结果中数组的顺序和Promise.all()接收到的数组顺序一致。
+13. all和race传入的数组中如果有会抛出异常的异步任务，那么只有最先抛出的错误会被捕获，并且是被then的第二个参数或者后面的catch捕获；但并不会影响数组中其它的异步任务的执行。
+
 
 ### null 和 undefined 区别
 - null 表示空，此处不应该有值；而 undefined 表示未定义，变量声明了未赋值就是 undefined。
