--- a/_posts/浏览器/2023-2-1-事件循环.md
+++ b/_posts/浏览器/2023-2-1-事件循环.md
@@ -26,12 +26,16 @@ tags:
 setTimeout 在浏览器中的最小延迟为 4ms。即使我们设置了 0，但还是 4ms（或者更久一些）。
 
 ## 宏任务
-script、setTimeout属于宏任务。
+script、setTimeout、setInterval、setImmediate 属于宏任务。
 
 ## 微任务
 微任务仅来自我们的代码。它们通常是由 promise 创建的：对 .then/catch/finally 处理程序的执行会成为微任务。await 同理。
 
 还有一个特殊的函数 queueMicrotask(func)，它对 func 进行排队，以在微任务队列中执行。
+
+process.nextTick，Object.observe, MutationObserver 也属于微任务。
+
+process.nextTick()方法将 callback 添加到"next tick 队列"。每次事件轮询后，next tick队列中的所有callbacks会被依次调用。
 
 **每个宏任务之后，引擎会立即执行微任务队列中的所有任务，清空微任务队列。然后再执行渲染，接着再执行其他的宏任务。**
 
