--- a/_posts/Vue/2023-2-24-Vue3.md
+++ b/_posts/Vue/2023-2-24-Vue3.md
@@ -10,13 +10,32 @@ tags:
 - Vue
 ---
 # Vue3
-## 单文件组件 script setup
-将 setup attribute 添加到 `<script>` 代码块上：`<script setup>`
+## setup
+要在组件模板中使用响应式状态，需要在 setup() 函数中定义并返回。
+```javascript
+export default {
+  setup () {
+    const state = reactive({num: 0});
+    return {
+      // 暴露到模板的变量
+    };
+  }
+}
+```
 
-与普通的 `<script>` 只在组件被首次引入的时候执行一次不同，<script setup> 中的代码会在每次组件实例被创建的时候执行。
+### 选项参数
+1. props。解构后失去响应式，使用 toRefs() 和 toRef() 将可以某个 prop 传到一个外部函数中并保持响应性。
+2. Setup。setup 函数的第二个参数是一个 非响应式的 Setup 上下文对象，可以安全地解构。其中attrs 和 slots 都是有状态的对象，它们总是会随着组件自身的更新而更新。这意味着你应当避免解构它们，并始终通过 attrs.x 或 slots.x 的形式使用其中的属性。
+   和 props 不同，attrs 和 slots 的属性都不是响应式的。如果你想要基于 attrs 或 slots 的改变来执行副作用，那么你应该在 onBeforeUpdate 生命周期钩子中编写相关逻辑。
+
+## script setup
+`<script setup>`，省去了暴露状态和方法的繁琐操作。顶层的绑定会被暴露给模板。
+
+与普通的 `<script>` 只在组件被首次引入的时候执行一次不同，<script setup> 中的代码会在组件创建之前, props 被解析之后执行。在 setup 中你应该
+避免使用 this，因为它不会找到组件实例。
 
 ### 顶层的绑定会被暴露给模板
-当使用 <script setup> 的时候，任何在 <script setup> 声明的顶层的绑定 (包括变量，函数声明，以及 import 引入的内容) 都能在模板中直接使用：
+当使用 `<script setup>` 的时候，任何在 `<script setup>` 声明的顶层的绑定 (包括变量，函数声明，以及 import 引入的内容) 都能在模板中直接使用：
 
 ```vue
 <script setup>
